@@ -14,48 +14,59 @@ from pint import (
 from pint.testsuite import BaseTestCase
 from pint.testsuite.helpers import requires_uncertainties
 
+from .parameterized import ParameterizedTestMixin
 
-class TestDefaultApplicationRegistry(BaseTestCase):
-    def test_unit(self):
+allprotos = ParameterizedTestMixin.parameterize(
+    ("protocol",), [(p,) for p in range(pickle.HIGHEST_PROTOCOL + 1)]
+)
+
+
+class TestDefaultApplicationRegistry(BaseTestCase, ParameterizedTestMixin):
+    @allprotos
+    def test_unit(self, protocol):
         u = Unit("kg")
         self.assertEqual(str(u), "kilogram")
-        u = pickle.loads(pickle.dumps(u))
+        u = pickle.loads(pickle.dumps(u, protocol))
         self.assertEqual(str(u), "kilogram")
 
-    def test_quantity_1arg(self):
+    @allprotos
+    def test_quantity_1arg(self, protocol):
         q = Quantity("123 kg")
         self.assertEqual(str(q.units), "kilogram")
         self.assertEqual(q.to("t").magnitude, 0.123)
-        q = pickle.loads(pickle.dumps(q))
+        q = pickle.loads(pickle.dumps(q, protocol))
         self.assertEqual(str(q.units), "kilogram")
         self.assertEqual(q.to("t").magnitude, 0.123)
 
-    def test_quantity_2args(self):
+    @allprotos
+    def test_quantity_2args(self, protocol):
         q = Quantity(123, "kg")
         self.assertEqual(str(q.units), "kilogram")
         self.assertEqual(q.to("t").magnitude, 0.123)
-        q = pickle.loads(pickle.dumps(q))
+        q = pickle.loads(pickle.dumps(q, protocol))
         self.assertEqual(str(q.units), "kilogram")
         self.assertEqual(q.to("t").magnitude, 0.123)
 
     @requires_uncertainties()
-    def test_measurement_2args(self):
+    @allprotos
+    def test_measurement_2args(self, protocol):
         m = Measurement(Quantity(123, "kg"), Quantity(15, "kg"))
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 15)
         self.assertEqual(str(m.units), "kilogram")
-        m = pickle.loads(pickle.dumps(m))
+        m = pickle.loads(pickle.dumps(m, protocol))
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 15)
         self.assertEqual(str(m.units), "kilogram")
 
     @requires_uncertainties()
-    def test_measurement_3args(self):
+    @allprotos
+    def test_measurement_3args(self, protocol):
         m = Measurement(123, 15, "kg")
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 15)
         self.assertEqual(str(m.units), "kilogram")
-        m = pickle.loads(pickle.dumps(m))
+        m = pickle.loads(pickle.dumps(m, protocol))
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 15)
         self.assertEqual(str(m.units), "kilogram")
@@ -65,25 +76,27 @@ class TestDefaultApplicationRegistry(BaseTestCase):
         u = ureg.Unit("kg")
         self.assertEqual(str(u), "kilogram")
 
-    def test_pickle_crash(self):
+    @allprotos
+    def test_pickle_crash(self, protocol):
         ureg = UnitRegistry(None)
         ureg.define("foo = []")
         q = ureg.Quantity(123, "foo")
-        b = pickle.dumps(q)
+        b = pickle.dumps(q, protocol)
         self.assertRaises(UndefinedUnitError, pickle.loads, b)
-        b = pickle.dumps(q.units)
+        b = pickle.dumps(q.units, protocol)
         self.assertRaises(UndefinedUnitError, pickle.loads, b)
 
     @requires_uncertainties()
-    def test_pickle_crash_measurement(self):
+    @allprotos
+    def test_pickle_crash_measurement(self, protocol):
         ureg = UnitRegistry(None)
         ureg.define("foo = []")
         m = ureg.Quantity(123, "foo").plus_minus(10)
-        b = pickle.dumps(m)
+        b = pickle.dumps(m, protocol)
         self.assertRaises(UndefinedUnitError, pickle.loads, b)
 
 
-class TestCustomApplicationRegistry(BaseTestCase):
+class TestCustomApplicationRegistry(BaseTestCase, ParameterizedTestMixin):
     def setUp(self):
         super().setUp()
         self.ureg_bak = get_application_registry()
@@ -97,52 +110,57 @@ class TestCustomApplicationRegistry(BaseTestCase):
         super().tearDown()
         set_application_registry(self.ureg_bak)
 
-    def test_unit(self):
+    @allprotos
+    def test_unit(self, protocol):
         u = Unit("foo")
         self.assertEqual(str(u), "foo")
-        u = pickle.loads(pickle.dumps(u))
+        u = pickle.loads(pickle.dumps(u, protocol))
         self.assertEqual(str(u), "foo")
 
-    def test_quantity_1arg(self):
+    @allprotos
+    def test_quantity_1arg(self, protocol):
         q = Quantity("123 foo")
         self.assertEqual(str(q.units), "foo")
         self.assertEqual(q.to("bar").magnitude, 246)
-        q = pickle.loads(pickle.dumps(q))
+        q = pickle.loads(pickle.dumps(q, protocol))
         self.assertEqual(str(q.units), "foo")
         self.assertEqual(q.to("bar").magnitude, 246)
 
-    def test_quantity_2args(self):
+    @allprotos
+    def test_quantity_2args(self, protocol):
         q = Quantity(123, "foo")
         self.assertEqual(str(q.units), "foo")
         self.assertEqual(q.to("bar").magnitude, 246)
-        q = pickle.loads(pickle.dumps(q))
+        q = pickle.loads(pickle.dumps(q, protocol))
         self.assertEqual(str(q.units), "foo")
         self.assertEqual(q.to("bar").magnitude, 246)
 
     @requires_uncertainties()
-    def test_measurement_2args(self):
+    @allprotos
+    def test_measurement_2args(self, protocol):
         m = Measurement(Quantity(123, "foo"), Quantity(10, "bar"))
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 5)
         self.assertEqual(str(m.units), "foo")
-        m = pickle.loads(pickle.dumps(m))
+        m = pickle.loads(pickle.dumps(m, protocol))
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 5)
         self.assertEqual(str(m.units), "foo")
 
     @requires_uncertainties()
-    def test_measurement_3args(self):
+    @allprotos
+    def test_measurement_3args(self, protocol):
         m = Measurement(123, 5, "foo")
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 5)
         self.assertEqual(str(m.units), "foo")
-        m = pickle.loads(pickle.dumps(m))
+        m = pickle.loads(pickle.dumps(m, protocol))
         self.assertEqual(m.value.magnitude, 123)
         self.assertEqual(m.error.magnitude, 5)
         self.assertEqual(str(m.units), "foo")
 
 
-class TestSwapApplicationRegistry(BaseTestCase):
+class TestSwapApplicationRegistry(BaseTestCase, ParameterizedTestMixin):
     """Test that the constructors of Quantity, Unit, and Measurement capture
     the registry that is set as the application registry at creation time
 
@@ -167,12 +185,13 @@ class TestSwapApplicationRegistry(BaseTestCase):
     def tearDown(self):
         set_application_registry(self.ureg_bak)
 
-    def test_quantity_1arg(self):
+    @allprotos
+    def test_quantity_1arg(self, protocol):
         set_application_registry(self.ureg1)
         q1 = Quantity("1 foo")
         set_application_registry(self.ureg2)
         q2 = Quantity("1 foo")
-        q3 = pickle.loads(pickle.dumps(q1))
+        q3 = pickle.loads(pickle.dumps(q1, protocol))
         assert q1.dimensionality == {"[dim1]": 1}
         assert q2.dimensionality == {"[dim2]": 1}
         assert q3.dimensionality == {"[dim2]": 1}
@@ -180,12 +199,13 @@ class TestSwapApplicationRegistry(BaseTestCase):
         assert q2.to("bar").magnitude == 3
         assert q3.to("bar").magnitude == 3
 
-    def test_quantity_2args(self):
+    @allprotos
+    def test_quantity_2args(self, protocol):
         set_application_registry(self.ureg1)
         q1 = Quantity(1, "foo")
         set_application_registry(self.ureg2)
         q2 = Quantity(1, "foo")
-        q3 = pickle.loads(pickle.dumps(q1))
+        q3 = pickle.loads(pickle.dumps(q1, protocol))
         assert q1.dimensionality == {"[dim1]": 1}
         assert q2.dimensionality == {"[dim2]": 1}
         assert q3.dimensionality == {"[dim2]": 1}
@@ -193,23 +213,25 @@ class TestSwapApplicationRegistry(BaseTestCase):
         assert q2.to("bar").magnitude == 3
         assert q3.to("bar").magnitude == 3
 
-    def test_unit(self):
+    @allprotos
+    def test_unit(self, protocol):
         set_application_registry(self.ureg1)
         u1 = Unit("bar")
         set_application_registry(self.ureg2)
         u2 = Unit("bar")
-        u3 = pickle.loads(pickle.dumps(u1))
+        u3 = pickle.loads(pickle.dumps(u1, protocol))
         assert u1.dimensionality == {"[dim1]": 1}
         assert u2.dimensionality == {"[dim2]": 1}
         assert u3.dimensionality == {"[dim2]": 1}
 
     @requires_uncertainties()
-    def test_measurement_2args(self):
+    @allprotos
+    def test_measurement_2args(self, protocol):
         set_application_registry(self.ureg1)
         m1 = Measurement(Quantity(10, "foo"), Quantity(1, "foo"))
         set_application_registry(self.ureg2)
         m2 = Measurement(Quantity(10, "foo"), Quantity(1, "foo"))
-        m3 = pickle.loads(pickle.dumps(m1))
+        m3 = pickle.loads(pickle.dumps(m1, protocol))
 
         assert m1.dimensionality == {"[dim1]": 1}
         assert m2.dimensionality == {"[dim2]": 1}
@@ -222,12 +244,13 @@ class TestSwapApplicationRegistry(BaseTestCase):
         self.assertEqual(m3.to("bar").error.magnitude, 3)
 
     @requires_uncertainties()
-    def test_measurement_3args(self):
+    @allprotos
+    def test_measurement_3args(self, protocol):
         set_application_registry(self.ureg1)
         m1 = Measurement(10, 1, "foo")
         set_application_registry(self.ureg2)
         m2 = Measurement(10, 1, "foo")
-        m3 = pickle.loads(pickle.dumps(m1))
+        m3 = pickle.loads(pickle.dumps(m1, protocol))
 
         assert m1.dimensionality == {"[dim1]": 1}
         assert m2.dimensionality == {"[dim2]": 1}
