@@ -2,6 +2,7 @@ import copy
 import datetime
 import math
 import operator as op
+import pickle
 import warnings
 from unittest.mock import patch
 
@@ -483,15 +484,12 @@ class TestQuantity(QuantityTestCase):
         )
 
     def test_pickle(self):
-        import pickle
-
-        def pickle_test(q):
-            self.assertEqual(q, pickle.loads(pickle.dumps(q)))
-
-        pickle_test(self.Q_(32, ""))
-        pickle_test(self.Q_(2.4, ""))
-        pickle_test(self.Q_(32, "m/s"))
-        pickle_test(self.Q_(2.4, "m/s"))
+        for protocol in range(pickle.HIGHEST_PROTOCOL + 1):
+            for magnitude, unit in ((32, ""), (2.4, ""), (32, "m/s"), (2.4, "m/s")):
+                with self.subTest(protocol=protocol, magnitude=magnitude, unit=unit):
+                    q1 = self.Q_(magnitude, unit)
+                    q2 = pickle.loads(pickle.dumps(q1, protocol))
+                    self.assertEqual(q1, q2)
 
     @helpers.requires_numpy()
     def test_from_sequence(self):
